Adding some more strenuous examples.
Note that this currently looks a little crappy due to weirdness with the conversion
of the jquery plot in the custom display logic notebook.

--- a/example/source/example.ipynb
+++ b/example/source/example.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9d8ca6f5bbb93707899d8fcb49d3fad6d6d396d3714c162db723b1a0a04f4615"
+  "signature": "sha256:36f85f14d4f5590f1d553a2e9f7b3c6e6dd49f0c336b8d220c920cffe831e980"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -39,6 +39,16 @@
       "plt.ylabel('my overall health')\n",
       " \n",
       "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\"This is a cell that returns text\""
      ],
      "language": "python",
      "metadata": {},
