Updating notebooks to nbformat4

--- a/example/source/example.ipynb
+++ b/example/source/example.ipynb
@@ -1,61 +1,73 @@
 {
- "metadata": {
-  "name": "",
-  "signature": "sha256:36f85f14d4f5590f1d553a2e9f7b3c6e6dd49f0c336b8d220c920cffe831e980"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
- "worksheets": [
+ "cells": [
   {
-   "cells": [
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "%matplotlib inline\n",
-      "from matplotlib import pyplot as plt\n",
-      "import numpy as np\n",
-      "\n",
-      "plt.xkcd()\n",
-      "\n",
-      "fig = plt.figure()\n",
-      "ax = fig.add_subplot(1, 1, 1)\n",
-      "ax.spines['right'].set_color('none')\n",
-      "ax.spines['top'].set_color('none')\n",
-      "plt.xticks([])\n",
-      "plt.yticks([])\n",
-      "ax.set_ylim([-30, 10])\n",
-      "\n",
-      "data = np.ones(100)\n",
-      "data[70:] -= np.arange(30)\n",
-      "\n",
-      "plt.annotate(\n",
-      "    'THE DAY I REALIZED\\nI COULD COOK BACON\\nWHENEVER I WANTED',\n",
-      "    xy=(70, 1), arrowprops=dict(arrowstyle='->'), xytext=(15, -10))\n",
-      "\n",
-      "plt.plot(data)\n",
-      "\n",
-      "plt.xlabel('time')\n",
-      "plt.ylabel('my overall health')\n",
-      " \n",
-      "plt.show()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "\"This is a cell that returns text\""
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    }
-   ],
-   "metadata": {}
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "plt.xkcd()\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(1, 1, 1)\n",
+    "ax.spines['right'].set_color('none')\n",
+    "ax.spines['top'].set_color('none')\n",
+    "plt.xticks([])\n",
+    "plt.yticks([])\n",
+    "ax.set_ylim([-30, 10])\n",
+    "\n",
+    "data = np.ones(100)\n",
+    "data[70:] -= np.arange(30)\n",
+    "\n",
+    "plt.annotate(\n",
+    "    'THE DAY I REALIZED\\nI COULD COOK BACON\\nWHENEVER I WANTED',\n",
+    "    xy=(70, 1), arrowprops=dict(arrowstyle='->'), xytext=(15, -10))\n",
+    "\n",
+    "plt.plot(data)\n",
+    "\n",
+    "plt.xlabel('time')\n",
+    "plt.ylabel('my overall health')\n",
+    " \n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\"This is a cell that returns text\""
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
