Making RunNotebook a python module

--- a/example/source/custom-display-logic.ipynb
+++ b/example/source/custom-display-logic.ipynb
@@ -129,7 +129,7 @@
     "\n",
     "    def _repr_svg_(self):\n",
     "        if self._svg_data is None:\n",
-    "            self._svg_data = self._figure_data('svg').decode('utf-8')#.encode('utf-8')\n",
+    "            self._svg_data = self._figure_data('svg').encode('utf-8')\n",
     "        return self._svg_data\n",
     "    \n",
     "    def _repr_latex_(self):\n",
@@ -422,75 +422,6 @@
    "source": [
     "p2 = np.polynomial.Polynomial([-20, 71, -15, 1])\n",
     "p2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## More complex display with `_ipython_display_`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Rich reprs can only display one object or mime-type at a time.\n",
-    "Sometimes this is not enough,\n",
-    "because you need to get javascript on the page, or you want LaTeX and a PNG.\n",
-    "This can be done with multiple calls to display easily enough,\n",
-    "but then users need to know more than they should.\n",
-    "\n",
-    "In **IPython 2.0**, we added a special `_ipython_display_` method,\n",
-    "that allows your objects to take control of displaying.\n",
-    "If this method is defined, IPython will call it, and make no effort to display the object itself.\n",
-    "It's a way for you to say \"Back off, IPython, I got this.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import uuid\n",
-    "from IPython.display import display_javascript, display_html, display\n",
-    "\n",
-    "class FlotPlot(object):\n",
-    "    def __init__(self, x, y):\n",
-    "        self.x = x\n",
-    "        self.y = y\n",
-    "        self.uuid = str(uuid.uuid4())\n",
-    "    \n",
-    "    def _ipython_display_(self):\n",
-    "        json_data = json.dumps(zip(self.x, self.y))\n",
-    "        display_html('<div id=\"{}\" style=\"height: 300px; width:80%;\"></div>'.format(self.uuid),\n",
-    "            raw=True\n",
-    "        )\n",
-    "        display_javascript(\"\"\"\n",
-    "        require([\"//cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/jquery.flot.min.js\"], function() {\n",
-    "          var line = JSON.parse(\"%s\");\n",
-    "          console.log(line);\n",
-    "          $.plot(\"#%s\", [line]);\n",
-    "        });\n",
-    "        \"\"\" % (json_data, self.uuid), raw=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "x = np.linspace(0,10)\n",
-    "y = np.sin(x)\n",
-    "FlotPlot(x, np.sin(x))"
    ]
   }
  ],
